#83 Refactoring and design fixing

--- a/EventManager.Client/App.razor
+++ b/EventManager.Client/App.razor
@@ -95,14 +95,14 @@
             H5 = new H5
             {
                 FontFamily = FontFamily,
-                FontSize = "16px",
+                FontSize = "18px",
                 LineHeight = 1.3
             },
             H6 = new H6
             {
                 FontFamily = FontFamily,
-                FontSize = "14px",
-                LineHeight = 1.3
+                FontSize = "18px",
+                LineHeight = 1.3,
             },
             Subtitle1 = new Subtitle1
             {
