--- a/EventManager.Client/Pages/Notifications/MyNotificationListPage.razor
+++ b/EventManager.Client/Pages/Notifications/MyNotificationListPage.razor
@@ -5,14 +5,17 @@
     <h1 class="em-page-title">My Notifications</h1>
 
     <div class="action-bar blue-label">
-        <MudSelect T="int?" Label="Importance" Variant="Variant.Outlined" ValueChanged="ImportanceValueChangedEvent" >
-            <MudSelectItem T="int?" Value="null">-</MudSelectItem>
-            <MudSelectItem T="int?" Value="1">Level 1</MudSelectItem>
-            <MudSelectItem T="int?" Value="2">Level 2</MudSelectItem>
-            <MudSelectItem T="int?" Value="3">Level 3</MudSelectItem>
-        </MudSelect>
+        <div>
+            <MudSelect T="int?" Label="Importance" Variant="Variant.Outlined" ValueChanged="ImportanceValueChangedEvent"
+                FullWidth="false" Color="Color.Primary">
+                <MudSelectItem T="int?" Value="null">-</MudSelectItem>
+                <MudSelectItem T="int?" Value="1">Level 1</MudSelectItem>
+                <MudSelectItem T="int?" Value="2">Level 2</MudSelectItem>
+                <MudSelectItem T="int?" Value="3">Level 3</MudSelectItem>
+            </MudSelect>
+        </div>
         <span class="spacer"></span>
-        <MudCheckBox T="bool" Label="Show all" CheckedChanged="ShowReadValueChangedEvent" />
+        <MudCheckBox T="bool" Color="Color.Primary" Label="Show all" CheckedChanged="ShowReadValueChangedEvent" />
     </div>
     @if (IsLoading)
     {
@@ -22,10 +25,10 @@
     {
         @if (FilteredNotifications != null && FilteredNotifications.Count > 0)
         {
-            <div class="notification-list p-2">
+            <div class="notification-list p-1">
                 @foreach (var notification in FilteredNotifications)
                 {
-                    <MyNotificationComponent Notification="notification"></MyNotificationComponent>
+                    <MyNotificationComponent Notification="notification" />
                 }
             </div>
         }
