--- a/EventManager.Client/Pages/Notifications/MyNotificationListPage.razor.css
+++ b/EventManager.Client/Pages/Notifications/MyNotificationListPage.razor.css
@@ -1,3 +1,10 @@
+.em-my-notifications {
+  overflow: hidden;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+}
+
 .em-my-notifications .action-bar {
   background-color: rgba(240, 174, 73, 0.4);
   margin-bottom: 1rem;
@@ -8,6 +15,15 @@
   padding: 0.5rem;
   display: flex;
   flex-direction: column;
-  flex-direction: row; }
-  .em-my-notifications .action-bar .spacer {
-    flex-grow: 1; }
+  flex-direction: row;
+}
+.em-my-notifications .action-bar .spacer {
+  flex-grow: 1;
+}
+
+.em-my-notifications .notification-list {
+  display: flex;
+  flex-grow: 1;
+  overflow: auto;
+  flex-direction: column;
+}
