--- a/EventManager.Client/Shared/Common/ConfirmDialog.razor
+++ b/EventManager.Client/Shared/Common/ConfirmDialog.razor
@@ -1,7 +1,9 @@
 @using EventManager.Client.Enums
 <MudDialog>
     <TitleContent>
-        Confirm @ConfirmTypeConverter.GetStringValue(Input.Action)
+        <MudText Typo="Typo.h6">
+            Confirm @ConfirmTypeConverter.GetStringValue(Input.Action)
+        </MudText>
     </TitleContent>
     <DialogContent>
         Are you sure want to @ConfirmTypeConverter.GetStringValue(Input.Action) @Input.Name?
