--- a/EventManager.Client/Shared/Components/Notifications/MyNotificationComponent.razor.css
+++ b/EventManager.Client/Shared/Components/Notifications/MyNotificationComponent.razor.css
@@ -7,30 +7,43 @@
   padding: 0.5rem;
   display: flex;
   flex-direction: column;
-  flex-direction: column; }
-  .notification .spacer {
-    flex-grow: 1; }
-  .notification .content {
-    display: flex;
-    flex-direction: row; }
-    .notification .content .text {
-      flex-grow: 1;
-      text-align: justify; }
-    .notification .content .status {
-      text-align: right; }
-  .notification .footer {
-    display: flex;
-    flex-direction: row;
-    font-size: 0.8rem;
-    font-style: italic; }
-    .notification .footer .source {
-      flex-grow: 1;
-      text-align: left; }
-    .notification .footer .date {
-      text-align: right; }
-  .notification.importance-1 {
-    background-color: rgba(235, 223, 109, 0.75); }
-  .notification.importance-2 {
-    background-color: rgba(235, 159, 109, 0.75); }
-  .notification.importance-3 {
-    background-color: rgba(235, 109, 109, 0.75); }
+  flex-direction: column;
+  margin-top: 0.3rem;
+  margin-bottom: 0.3rem;
+}
+.notification .spacer {
+  flex-grow: 1;
+}
+.notification .content {
+  display: flex;
+  flex-direction: row;
+}
+.notification .content .text {
+  flex-grow: 1;
+  text-align: justify;
+}
+.notification .content .status {
+  text-align: right;
+}
+.notification .footer {
+  display: flex;
+  flex-direction: row;
+  font-size: 0.8rem;
+  font-style: italic;
+}
+.notification .footer .source {
+  flex-grow: 1;
+  text-align: left;
+}
+.notification .footer .date {
+  text-align: right;
+}
+.notification.importance-1 {
+  background-color: rgba(235, 223, 109, 0.75);
+}
+.notification.importance-2 {
+  background-color: rgba(235, 159, 109, 0.75);
+}
+.notification.importance-3 {
+  background-color: rgba(235, 109, 109, 0.75);
+}
